updated docker command for Java 11